@@ -44,6 +44,7 @@ Cobbler CHANGELOG
 - changes to PXE images directly
 - bootloaders is no longer a config file setting
 - we can now look for syslinux in one of two places (/usr/lib, /usr/share)
+- cobbler hardlinks a bit more when it can for /var/www image copies
 
 - Wed Jun 03 2008 - 1.0.3
 - Fix typo in replicate code
